--- a/archlinuxcn/star/lilac.yaml
+++ b/archlinuxcn/star/lilac.yaml
@@ -2,6 +2,8 @@ update_on:
   - source: github
     github: alexdobin/STAR
     use_latest_release: true
+  - source: manual
+    manual: 1
 
 maintainers:
   - github: dctxmei
