python-keras2onnx: bump to include a CLI fix [1]
[1] https://github.com/onnx/keras-onnx/pull/627

--- a/archlinuxcn/python-keras2onnx/PKGBUILD
+++ b/archlinuxcn/python-keras2onnx/PKGBUILD
@@ -2,11 +2,11 @@
 
 pkgname=python-keras2onnx
 _pkgname=keras-onnx
-pkgver=1.7.0.40.g0c037e5
+pkgver=1.7.0.46.g9b9fc36
 # The latest stable version requires quite a few patches for compatibility
 # with the latest TensorFlow/ONNXRuntime
-_commit=0c037e5968c0b5dc6bb12dcf4edcfdeeaf4c964f
-pkgrel=2
+_commit=9b9fc367c30e3a6c2f8a8464db4c3cced52df4ab
+pkgrel=1
 pkgdesc='Convert tf.keras/Keras models to ONNX'
 arch=(any)
 url='https://github.com/onnx/keras-onnx'
