--- a/archlinuxcn/bibata-cursor-theme/lilac.yaml
+++ b/archlinuxcn/bibata-cursor-theme/lilac.yaml
@@ -5,6 +5,8 @@ post_build: aur_post_build
 update_on:
   - source: aur
     aur: bibata-cursor-theme
+  - source: manual
+    manual: 1
 
 maintainers:
   - github: dctxmei
