--- a/archlinuxcn/bibata-cursor-theme/lilac.yaml
+++ b/archlinuxcn/bibata-cursor-theme/lilac.yaml
@@ -2,6 +2,9 @@ pre_build: aur_pre_build
 
 post_build: aur_post_build
 
+repo_depends:
+  - python-clickgen
+
 update_on:
   - source: aur
     aur: bibata-cursor-theme
