[med,python-pivy,soqt] moved to official repos
Close #1932
Close #1933

--- a/archlinuxcn/freecad/lilac.yaml
+++ b/archlinuxcn/freecad/lilac.yaml
@@ -8,8 +8,8 @@ update_on:
     manual: 0.18.16158
   - alias: boost
   - alias: python
+  - source: manual
+    manual: 1
 
 repo_depends:
-  - python-pivy
   - oce-git
-  - med
