--- a/archlinuxcn/python-itk/lilac.yaml
+++ b/archlinuxcn/python-itk/lilac.yaml
@@ -4,8 +4,9 @@ maintainers:
 build_prefix: extra-x86_64
 
 update_on:
-  - source: pypi
-    pypi: itk
+  - source: github
+    pypi: InsightSoftwareConsortium/ITKPythonPackage
+    use_latest_release: true
   - alias: python
 
 # vim:set ts=2 sw=2 et:
