--- a/archlinuxcn/python-itk/lilac.yaml
+++ b/archlinuxcn/python-itk/lilac.yaml
@@ -5,7 +5,7 @@ build_prefix: extra-x86_64
 
 update_on:
   - source: github
-    pypi: InsightSoftwareConsortium/ITKPythonPackage
+    github: InsightSoftwareConsortium/ITKPythonPackage
     use_latest_release: true
   - alias: python
 
