python-pytorch-lightning: update lilac.yaml

--- a/archlinuxcn/python-pytorch-lightning/lilac.yaml
+++ b/archlinuxcn/python-pytorch-lightning/lilac.yaml
@@ -8,6 +8,6 @@ repo_depends:
 
 update_on:
   - source: github
-    pypi: PyTorchLightning/pytorch-lightning
+    github: PyTorchLightning/pytorch-lightning
     use_latest_release: true
   - alias: python
