--- a/archlinuxcn/ferdi-git/PKGBUILD
+++ b/archlinuxcn/ferdi-git/PKGBUILD
@@ -8,12 +8,12 @@ _pkgname='ferdi'
 pkgname="$_pkgname-git"
 pkgver=20201011_181618
 epoch=1
-pkgrel=1
+pkgrel=2
 pkgdesc='A messaging browser that allows you to combine your favorite messaging services into one application - git version'
 arch=('x86_64' 'i686' 'armv7h' 'aarch64')
 url="https://get$_pkgname.com"
 license=('Apache')
-depends=('electron' 'libxkbfile')
+depends=('electron9' 'libxkbfile')
 makedepends=('git' 'npm' 'python')
 provides=("$_pkgname")
 conflicts=("$_pkgname")
@@ -29,7 +29,7 @@ sha256sums=('SKIP'
             'SKIP'
             'SKIP'
             '5013233fc508f16b6782efa72da2ac242996f8555b3135aa0d2d98029c2bbc53'
-            '3a21a67cc821892f9ae1b53b9108ec1859aa42b301fa6523c6c7accf6bc2a6c5'
+            '2379f720680797e5f85b7a933aa04bf70bd7274c2e0d457a6d94d5ef2065ab16'
             '459b5130d6c331d7f41e506d98e877256ef515711a6577ecc37d00b28c83d4b6')
 
 _sourcedirectory="$pkgname"
@@ -49,7 +49,7 @@ prepare() {
 	git submodule update --init --recursive
 
 	# Set system Electron version for ABI compatibility
-	sed -E -i 's|("electron": ").*"|\1'"$(cat '/usr/lib/electron/version')"'"|' 'package.json'
+	sed -E -i 's|("electron": ").*"|\1'"$(cat '/usr/lib/electron9/version')"'"|' 'package.json'
 
 	# Prevent Ferdi from being launched in dev mode
 	sed -i "s|import isDevMode from 'electron-is-dev'|const isDevMode = false|g" 'src/index.js' 'src/config.js'
@@ -92,8 +92,8 @@ build() {
 	export npm_config_cache="$srcdir/$pkgname-npm-cache"
 
 	npx gulp build
-        npx electron-rebuild -v "$(cat '/usr/lib/electron/version')"
-	npx electron-builder --linux dir "--$_electronbuilderarch" -c.electronDist='/usr/lib/electron' -c.electronVersion="$(cat '/usr/lib/electron/version')"
+        npx electron-rebuild -v "$(cat '/usr/lib/electron9/version')"
+	npx electron-builder --linux dir "--$_electronbuilderarch" -c.electronDist='/usr/lib/electron9' -c.electronVersion="$(cat '/usr/lib/electron9/version')"
 }
 
 package() {
