--- a/archlinuxcn/ferdi-git/lilac.yaml
+++ b/archlinuxcn/ferdi-git/lilac.yaml
@@ -10,6 +10,6 @@ update_on:
   - source: github
     github: getferdi/ferdi
   - source: archpkg
-    archpkg: electron
+    archpkg: electron9
     from_pattern: ^(\d+\.\d+)\..*
     to_pattern: \1
