python-pytorch-lightning: update optdepends

--- a/archlinuxcn/python-pytorch-lightning/PKGBUILD
+++ b/archlinuxcn/python-pytorch-lightning/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=python-pytorch-lightning
 _pkgname=pytorch-lightning
 pkgver=1.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="The lightweight PyTorch wrapper for high-performance AI research"
 arch=('any')
 url='https://github.com/PyTorchLightning/pytorch-lightning'
@@ -21,7 +21,7 @@ depends=(
 )
 optdepends=(
   'python-apex: mixed precision support'    
-  'python-tensorboard: tensorboard support'
+  'tensorboard: tensorboard support'
   'python-horovod: for distributed training'
 )
 makedepends=('python-setuptools')
