mxnet-git: update cuda arch list

--- a/archlinuxcn/mxnet-git/PKGBUILD
+++ b/archlinuxcn/mxnet-git/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Butui Hu <hot123tea123@gmail.com>
 
-_cudaarch="5.2;6.0;6.1;7.0;7.2;7.5;8.0"
+_cudaarch="5.0;5.2;5.3;6.0;6.1;6.2;7.0;7.2;7.5;8.0;8.6"
 _pkgname=mxnet
 pkgname=('mxnet-git' 'mxnet-cuda-git')
 _pkgver=2.0.0
