--- a/archlinuxcn/python-simpleitk/lilac.yaml
+++ b/archlinuxcn/python-simpleitk/lilac.yaml
@@ -4,7 +4,8 @@ maintainers:
 build_prefix: extra-x86_64
 
 update_on:
-  - source: pypi
-    pypi: SimpleITK
+  - source: github
+    github: SimpleITK/SimpleITK
+    use_latest_release: true
   - alias: python
 
