qv2ray{,-dev-git}: explicitly use nvchecker

--- a/archlinuxcn/qv2ray-dev-git/lilac.yaml
+++ b/archlinuxcn/qv2ray-dev-git/lilac.yaml
@@ -11,6 +11,8 @@ update_on:
   - source: github
     github: Qv2ray/Qv2ray
     branch: dev
-  - alias: grpc
-  - alias: protobuf
+  - source: archpkg
+    archpkg: grpc
+  - source: archpkg
+    archpkg: protobuf
 
