--- a/archlinuxcn/qv2ray/lilac.yaml
+++ b/archlinuxcn/qv2ray/lilac.yaml
@@ -7,6 +7,8 @@ update_on:
   - source: github
     github: Qv2ray/Qv2ray
     use_latest_release: true
-  - alias: protobuf
-  - alias: grpc
+  - source: archpkg
+    archpkg: grpc
+  - source: archpkg
+    archpkg: protobuf
 
