--- a/archlinuxcn/kcolorpicker/lilac.yaml
+++ b/archlinuxcn/kcolorpicker/lilac.yaml
@@ -6,4 +6,4 @@ build_prefix: extra-x86_64
 update_on:
   - source: github
     github: ksnip/kColorPicker
-    use_latest_release: true
+    use_latest_tag: true
