--- a/archlinuxcn/franz/lilac.yaml
+++ b/archlinuxcn/franz/lilac.yaml
@@ -10,10 +10,10 @@ build_prefix: extra-x86_64
 
 update_on:
   - source: manual
-    manual: 5.5.0
+    manual: 5.6.0-beta
   - source: archpkg
     archpkg: electron
-    from_pattern: ^(\d+\.\d+)\..*
+    from_pattern: ^(\d+\.\d+.\d+).*
     to_pattern: \1
   - source: manual
     manual: 6
