--- a/archlinuxcn/franz/franz.sh.in
+++ b/archlinuxcn/franz/franz.sh.in
@@ -1,3 +1,3 @@
-#!/bin/sh
+#!/bin/bash
 
-exec @electron@ /usr/lib/franz/resources/app.asar "$@"
+exec -a franz @electron@ /usr/lib/franz/resources/app.asar "$@"
