--- a/archlinuxcn/kimageannotator/lilac.yaml
+++ b/archlinuxcn/kimageannotator/lilac.yaml
@@ -6,6 +6,6 @@ build_prefix: extra-x86_64
 update_on:
   - source: github
     github: ksnip/kImageAnnotator
-    use_latest_release: true
+    use_latest_tag: true
 repo_depends:
   - kcolorpicker
